--- a/AdminDashboard.html
+++ b/AdminDashboard.html
@@ -609,8 +609,10 @@
         }
       }
     </style>
+    <link rel="stylesheet" href="responsive.css" />
   </head>
   <body>
+    <div id="sidebar-overlay" class="sidebar-overlay"></div>
     <div class="sidebar">
       <div class="sidebar-header">
         <img
@@ -672,6 +674,7 @@
 
     <div class="main-content" id="main-content-area">
       <div class="dashboard-header">
+        <button id="menu-toggle" class="menu-toggle-btn" aria-label="Toggle menu"><i class="fas fa-bars"></i></button>
         <div class="page-title">
           <h1>Admin Dashboard</h1>
           <p>
