--- a/Gallery.html
+++ b/Gallery.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Faith Life International School</title>
   <link rel="stylesheet" href="Gallery.css">
+  <link rel="stylesheet" href="responsive.css">
 </head>
 <body>
   
