--- a/parentDashboard.html
+++ b/parentDashboard.html
@@ -602,8 +602,10 @@
         }
       }
     </style>
+    <link rel="stylesheet" href="responsive.css" />
   </head>
   <body>
+    <div id="sidebar-overlay" class="sidebar-overlay"></div>
     <div class="sidebar">
       <div class="sidebar-header">
         <img class="school-logo" src="logo.jpg" alt="School Logo" />
@@ -646,6 +648,7 @@
 
     <div class="main-content">
       <div class="dashboard-header">
+        <button id="menu-toggle" class="menu-toggle-btn" aria-label="Toggle menu"><i class="fas fa-bars"></i></button>
         <div class="page-title">
           <h1 id="page-heading">Parent Dashboard</h1>
           <p id="page-subheading">
